fixed right white space issue

--- a/css/styles.css
+++ b/css/styles.css
@@ -15,6 +15,7 @@ header {
   top:0;
   z-index: 1;
   width:100%;
+  overflow-x: hidden;
   opacity:.8;
 }
 
@@ -262,9 +263,10 @@ footer {
   bottom:0;
   background-color: #420000;
   color:#f6f6f6;
-  width: 100%;
-  height:20px;
-  padding:25px;
+  height:45px;
+  padding-top:15px;
+  width:100%;
+  overflow-x: hidden;
   opacity:.8;
 }
 
